--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -3,25 +3,35 @@
 <div class = "vertical serif tanka-index text-nowrap mt-3">
   <%= paginate @notifications %>
   <% @notifications.each do |notification| %>
-    <p>
+    <div class="vertical-flex p">
       <% if notification.followable_type == 'User' %>
-        <i class="bi bi-person-fill"></i>
-        <%= link_to (image_tag notification.follower.avatar.url(:small), class: 'rounded'), user_path(id: notification.follower.id) %>
-        <span class="align-middle d-inline-block">
+        <div>
+          <i class="bi bi-person-fill bi-vertical"></i>
+        </div>
+        <div>
+          <%= link_to (image_tag notification.follower.avatar.url(:small), class: 'rounded align-baseline'), user_path(id: notification.follower.id) %>
+        </div>
+        <div>
           <%= link_to notification.follower.name, user_path(id: notification.follower.id) %>さんにフォローされました
+        </div>
+        <div>
           <%= notification.created_at.strftime('%Y.%-m.%-d') %>
-        </span>
+        </div>
       <% else %>
-        <i class="bi bi-suit-heart-fill"></i>
-        <%= link_to (image_tag notification.follower.avatar.url(:small), class: 'rounded'), user_path(id: notification.follower.id) %>
-        <% notification.followable = Post.find(notification.followable_id) %>
-        <% tanka = ApplicationController.helpers.strip_tags(notification.followable.tanka) %>
-        <span class="align-middle d-inline-block">
-          <%= link_to notification.follower.name, user_path(id: notification.follower.id) %>さんがいいねしました「<%= link_to (tanka.slice(0, 5) + '…'), followers_post_path(id: notification.followable.id) %>」
+        <div>
+          <i class="bi bi-suit-heart-fill bi-vertical"></i>
+        </div>
+        <div>
+          <%= link_to (image_tag notification.follower.avatar.url(:small), class: 'rounded align-baseline'), user_path(id: notification.follower.id) %>
+        </div>
+        <div>
+          <%= link_to notification.follower.name, user_path(id: notification.follower.id) %>さんがいいねしました「<%= link_to (ApplicationController.helpers.strip_tags(notification.followable.tanka).slice(0, 5) + '…'), followers_post_path(id: notification.followable.id) %>」
+        </div>
+        <div>
           <%= notification.created_at.strftime('%Y.%-m.%-d') %>
-        </span>
+        </div>
       <% end %>
-    </p>
+    </div>
   <% end %>
   <%= paginate @notifications %>
 </div>
