--- a/app/views/layouts/_toasts.html.erb
+++ b/app/views/layouts/_toasts.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag 'toast' do %>
+<div id="toast">
   <% if flash.present? %>
     <div class="toast-wrapper" data-controller="toast" aria-atomic="true" aria-live="polite">
       <% flash.each do |type, messages| %>
@@ -12,4 +12,4 @@
       <% end %>
     </div>
   <% end %>
-<% end %>
+</div>
