--- a/app/views/relationships/_followers_count.html.erb
+++ b/app/views/relationships/_followers_count.html.erb
@@ -1,6 +1,3 @@
-<%= turbo_frame_tag "followers_count_#{dom_id(user)}" do %>
-  <%= link_to 'フォロー', followees_user_path(id: user.id), data: { turbo: false }, class: 'align-middle horizontal sm tanka-link' %>
-  <%= link_to user.following_by_type_count('User'), followees_user_path(id: user.id), data: { turbo: false }, class: 'align-middle horizontal' %>
-  <%= link_to 'フォロワー', followers_user_path(id: user.id), data: { turbo: false }, class: 'align-middle horizontal sm tanka-link' %>
-  <%= link_to user.followings.length, followers_user_path(id: user.id), data: { turbo: false }, class: 'align-middle horizontal' %>
-<% end %>
+<div id="<%= "followers_count_#{dom_id(user)}" %>" class="horizontal align-middle">
+  <%= link_to user.followings.length, followers_user_path(id: user.id) %>
+</div>
