--- a/app/views/relationships/_unfollow.html.erb
+++ b/app/views/relationships/_unfollow.html.erb
@@ -1,3 +1,3 @@
-<%= turbo_frame_tag "follow_#{dom_id(user)}" do %>
-  <%= link_to 'リムーブ', relationship_path(@user.id), data: { turbo_method: :delete }, class: 'btn btn-sm btn-primary horizontal align-middle' %>&nbsp;
-<% end %>
+<div id="<%= "follow_#{dom_id(user)}" %>">
+  <%= link_to 'リムーブ', relationship_path(@user.id), data: { turbo_method: :delete }, class: 'btn btn-sm btn-primary horizontal' %>
+</div>
