--- a/app/views/users/followees.html.erb
+++ b/app/views/users/followees.html.erb
@@ -13,11 +13,6 @@
     </li>
   </ul>
   <%= paginate @users %>
-  <% @users.each do |user| %>
-    <p>
-      <%= link_to (image_tag user.avatar.url(:medium), class: 'rounded'), user_path(id: user.id), class: 'tanka-link' %>&nbsp;
-      <%= link_to user.name, user_path(id: user.id), class: 'tanka-link lg' %>
-    </p>
-  <% end %>
+  <%= render 'users/users', users: @users %>
   <%= paginate @users %>
 </div>
