--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,11 +3,6 @@
 <div class = "vertical serif tanka-index text-nowrap mt-3">
   <h6>歌人一覧</h6>
   <%= paginate @users %>
-  <% @users.each do |user| %>
-    <p>
-      <%= link_to (image_tag user.avatar.url(:medium), class: 'rounded'), user_path(id: user.id), class: 'align-middle' %>&nbsp;
-      <%= link_to user.name, user_path(id: user.id), class: 'tanka-link lg' %>
-    </p>
-  <% end %>
+  <%= render 'users/users', users: @users %>
   <%= paginate @users %>
 </div>
