--- a/app/views/relationships/_follow.html.erb
+++ b/app/views/relationships/_follow.html.erb
@@ -1,3 +1,3 @@
-<div id="<%= "follow_#{dom_id(user)}" %>">
-  <%= link_to 'フォロー', relationships_path(user_id: user.id), data: { turbo_method: :post }, class: 'btn btn-sm btn-primary horizontal d-block' %>
+<div id="<%= "follow_#{dom_id(user)}" %>" class="horizontal">
+  <%= link_to 'フォロー', relationships_path(user_id: user.id), data: { turbo_method: :post }, class: 'btn btn-sm btn-primary' %>
 </div>
