--- a/app/views/relationships/_unfollow.html.erb
+++ b/app/views/relationships/_unfollow.html.erb
@@ -1,3 +1,3 @@
-<div id="<%= "follow_#{dom_id(user)}" %>">
-  <%= link_to 'リムーブ', relationship_path(@user.id), data: { turbo_method: :delete }, class: 'btn btn-sm btn-primary horizontal d-block' %>
+<div id="<%= "follow_#{dom_id(user)}" %>" class="horizontal">
+  <%= link_to 'リムーブ', relationship_path(@user.id), data: { turbo_method: :delete }, class: 'btn btn-sm btn-primary' %>
 </div>
