--- a/app/views/favorites/_unlike.html.erb
+++ b/app/views/favorites/_unlike.html.erb
@@ -1,3 +1,3 @@
 <div id="<%= "like_#{dom_id(post)}" %>">
-  <%= link_to content_tag(:i, '', class: "#{size} bi bi-suit-heart-fill bi-vertical"), favorite_path(id: post.id, size: size), data: { turbo_method: :delete }  %>
+  <%= link_to content_tag(:i, '', class: "#{size} bi bi-suit-heart-fill bi-vertical"), favorite_path(post.id, size: size), data: { turbo_method: :delete }  %>
 </div>
