--- a/app/views/terms/index.html.erb
+++ b/app/views/terms/index.html.erb
@@ -1,5 +1,5 @@
 <% @title = '利用規約' %>
-<% @description = 'Utakataの利用規約です。' %>
+<% @description = 'Utakataの利用規約。' %>
 
 <div class="col-11 col-lg-5 mx-auto">
   <h4 class="mt-4">利用規約</h4>
