--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <% @title = '新しい歌' %>
-<% @description = '新着短歌の一覧です。' %>
+<% @description = 'Utakataの新着短歌。' %>
 
 <div class="vertical serif tanka-index text-nowrap mt-3">
   <ul class="nav nav-tabs vertical-tab">
