--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -21,7 +21,7 @@
   <h5 class="mt-4">関連リンク</h5>
   <ul class="ml">
     <li><a href="https://buy.stripe.com/cN25meehQb2jaQgaEE" target="_blank">寄付画面</a></li>
-    <li><%= link_to 'サイトのご案内', infos_path %></li>
+    <li><%= link_to 'サイトのご案内', about_index_path %></li>
     <li><%= link_to 'プライバシーポリシー', privacy_index_path %></li>
   </ul>
 </div>
