--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
     </li>
     <% unless user_signed_in? %>
       <li class="nav-item">
-        <%= link_to 'サイトのご案内', infos_path, class: 'nav-link vertical-tab text-secondary' %>
+        <%= link_to 'サイトのご案内', about_index_path, class: 'nav-link vertical-tab text-secondary' %>
       </li>
     <% end %>
   </ul>
