--- a/app/views/posts/popular/index.html.erb
+++ b/app/views/posts/popular/index.html.erb
@@ -6,9 +6,9 @@
     <li class="nav-item">
       <a class="nav-link active vertical-tab">人気の歌</a>
     </li>
-    <% unless user_signed_in? %>
+    <% unless current_user %>
       <li class="nav-item">
-        <%= link_to 'サイトのご案内', infos_path, class: 'nav-link vertical-tab text-secondary' %>
+        <%= link_to 'サイトのご案内', about_index_path, class: 'nav-link vertical-tab text-secondary' %>
       </li>
     <% end %>
   </ul>
