--- a/app/views/privacy/index.html.erb
+++ b/app/views/privacy/index.html.erb
@@ -24,7 +24,7 @@
   </ul>
   <h5 class="mt-4">関連リンク</h5>
   <ul class="ml">
-    <li><%= link_to 'サイトのご案内', infos_path %></li>
+    <li><%= link_to 'サイトのご案内', about_index_path %></li>
     <li><%= link_to '寄付のお願い', donations_path %></li>
     <li><%= link_to '利用規約', terms_path %></li>
   </ul>
