--- a/app/views/posts/followers/index.html.erb
+++ b/app/views/posts/followers/index.html.erb
@@ -1,4 +1,4 @@
-<% @title = "#{9829.chr("UTF-8")}#{ApplicationController.helpers.strip_tags(@post.tanka)}" %>
+<% @title = "#{9829.chr("UTF-8")}#{@post.tanka_text}" %>
 
 <div class = "vertical serif tanka-index text-nowrap mt-3">
   <%= render 'posts/post', post: @post, show_avatar: true %>
