--- a/app/views/users/followees/index.html.erb
+++ b/app/views/users/followees/index.html.erb
@@ -6,10 +6,10 @@
       <a class="nav-link active vertical-tab">フォロー</a>
     </li>
     <li class="nav-item">
-      <%= link_to 'フォロワー', followers_user_path(id: @user.id), class: 'nav-link vertical-tab text-secondary' %>
+      <%= link_to 'フォロワー', users_user_followers_path(@user), class: 'nav-link vertical-tab text-secondary' %>
     </li>
     <li class="nav-item">
-      <%= link_to '戻る', user_path(id: @user.id), class: 'nav-link vertical-tab text-secondary' %>
+      <%= link_to '戻る', user_path(@user), class: 'nav-link vertical-tab text-secondary' %>
     </li>
   </ul>
   <%= paginate @users %>
