--- a/app/views/users/followers/index.html.erb
+++ b/app/views/users/followers/index.html.erb
@@ -3,13 +3,13 @@
 <div class = "vertical serif tanka-index text-nowrap mt-3">
   <ul class="nav nav-tabs vertical-tab">
     <li class="nav-item">
-      <%= link_to 'フォロー', followees_user_path(id: @user.id), class: 'nav-link vertical-tab text-secondary' %>
+      <%= link_to 'フォロー', users_user_followees_path(@user), class: 'nav-link vertical-tab text-secondary' %>
     </li>
     <li class="nav-item">
       <a class="nav-link active vertical-tab">フォロワー</a>
     </li>
     <li class="nav-item">
-      <%= link_to '戻る', user_path(id: @user.id), class: 'nav-link vertical-tab text-secondary' %>
+      <%= link_to '戻る', user_path(@user), class: 'nav-link vertical-tab text-secondary' %>
     </li>
   </ul>
   <%= paginate @users %>
