--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,8 @@
 <div class="vertical-flex p">
   <div>
-    <%= link_to (image_tag user.avatar.url(:medium), class: 'rounded align-baseline'), user_path(id: user.id) %>
+    <%= link_to (image_tag user.avatar.url(:medium), class: 'rounded align-baseline'), user_path(user) %>
   </div>
   <div>
-    <%= link_to user.name, user_path(id: user.id), class: 'tanka-link lg' %>
+    <%= link_to user.name, user_path(user), class: 'tanka-link lg' %>
   </div>
 </div>
