--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,8 +3,11 @@
     <%= link_to 'Utakata', posts_path, class: 'navbar-brand' %>
     <% if current_user %>
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item form-inline me-2">
-          <%= link_to content_tag(:i, '', class: 'bi bi-bell-fill'), notifications_path %><span class="sm text-white top"><%= notifications_count %></span>
+        <li class="nav-item form-inline me-2 text-white">
+          <%= link_to content_tag(:i, '', class: 'bi bi-bell-fill'), notifications_path %>
+          <div class="sm top">
+            <%= notifications_count %>
+          </div>
         </li>
         <li class="nav-item dropdown">
           <div class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
