--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,14 +19,14 @@
             <%= link_to 'いいねした歌', favorites_path, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
             <%= link_to '設定', edit_user_registration_path, class: 'dropdown-item' %>
-            <%= link_to 'Logout', destroy_user_session_path, class: 'dropdown-item', data: { turbo_method: :delete } %>
+            <%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete }, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
             <%= link_to 'ご案内', about_index_path, class: 'dropdown-item' %>
             <%= link_to '寄付のお願い', donations_path, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
             <div class="px-2 py-2">
               <%= form_tag(posts_search_index_path, method: :get) do %>
-                <%= text_field_tag :search, '', autofocus: false, class: 'form-control form-control-sm', type: 'search', placeholder: '短歌 / 歌人を検索' %>
+                <%= text_field_tag :search, '', autofocus: false, type: 'search', placeholder: '短歌 / 歌人を検索', class: 'form-control form-control-sm' %>
               <% end %>
             </div>
           </div>
@@ -41,7 +41,7 @@
       </ul>
     <% else %>
       <%= form_tag(posts_search_index_path, method: :get) do %>
-        <%= text_field_tag :search, '', autofocus: false, class: 'form-control form-control-sm form-width', type: 'search', placeholder: '短歌 / 歌人を検索' %>
+        <%= text_field_tag :search, '', autofocus: false, type: 'search', placeholder: '短歌 / 歌人を検索', class: 'form-control form-control-sm form-width' %>
       <% end %>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item active">
