Use ActiveSupport::Concern

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -40,6 +40,8 @@
     <dd>
       <ul class="ml">
         <li>URLの設計を変更</li>
+        <li>ログアウト時の検索画面で「自分の短歌」タブを表示しないように変更</li>
+        <li>タブのスタイルを調整</li>
       </ul>
     </dd>
     <dt><time>2022/10/29</time></dt>
