--- a/app/views/posts/my_search/index.html.erb
+++ b/app/views/posts/my_search/index.html.erb
@@ -1,15 +1,15 @@
-<% @title = "「#{@search}」で自分の短歌を検索" %>
+<% @title = "「#{@keyword}」で自分の短歌を検索" %>
 
 <div class = "vertical serif tanka-index text-nowrap mt-3">
   <ul class="nav nav-tabs vertical-tab">
     <li class="nav-item">
-      <%= link_to '短歌', posts_search_index_path(search: @search), class: 'nav-link vertical-tab text-secondary' %>
+      <%= link_to '短歌', posts_search_index_path(keyword: @keyword), class: 'nav-link vertical-tab text-secondary' %>
     </li>
     <li class="nav-item">
       <a class="nav-link active vertical-tab">自分の短歌</a>
     </li>
     <li class="nav-item">
-      <%= link_to '歌人', users_search_index_path(search: @search), class: 'nav-link vertical-tab text-secondary' %>
+      <%= link_to '歌人', users_search_index_path(keyword: @keyword), class: 'nav-link vertical-tab text-secondary' %>
     </li>
   </ul>
   <%= paginate @posts %>
