--- a/app/views/users/search/index.html.erb
+++ b/app/views/users/search/index.html.erb
@@ -1,13 +1,15 @@
-<% @title = "「#{@search}」で歌人を検索" %>
+<% @title = "「#{@keyword}」で歌人を検索" %>
 
 <div class = "vertical serif tanka-index text-nowrap mt-3">
   <ul class="nav nav-tabs vertical-tab">
     <li class="nav-item">
-      <%= link_to '短歌', posts_search_index_path(search: @search), class: 'nav-link vertical-tab text-secondary' %>
+      <%= link_to '短歌', posts_search_index_path(keyword: @keyword), class: 'nav-link vertical-tab text-secondary' %>
     </li>
-    <li class="nav-item">
-      <%= link_to '自分の短歌', posts_my_search_index_path(search: @search), class: 'nav-link vertical-tab text-secondary' %>
-    </li>
+    <% if current_user %>
+      <li class="nav-item">
+        <%= link_to '自分の短歌', posts_my_search_index_path(keyword: @keyword), class: 'nav-link vertical-tab text-secondary' %>
+      </li>
+    <% end %>
     <li class="nav-item">
       <a class="nav-link active vertical-tab">歌人</a>
     </li>
