--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <% @title = '設定' %>
 <% user = current_user %>
 
-<div class="col-11 col-lg-5 mx-auto">
+<div class="col-11 col-lg-5 mx-auto mb-3">
   <ul class="nav nav-tabs mt-3" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
       <a class="nav-link active" id="profile-tab" data-bs-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">プロフ</a>
