--- a/app/views/terms/index.html.erb
+++ b/app/views/terms/index.html.erb
@@ -1,7 +1,7 @@
 <% @title = '利用規約' %>
 <% @description = 'Utakataの利用規約。' %>
 
-<div class="col-11 col-lg-5 mx-auto">
+<div class="col-11 col-lg-5 mx-auto mb-3">
   <h4 class="mt-4">利用規約</h4>
   <h5 class="mt-4">はじめに</h5>
   <p>Utakataは、管理人が個人で開発・運営しているWebサービスです。管理人もまた短歌愛好家であり、Utakataは、自由な創作を重んじる精神で運営したいと思っています。本規約には、最低限のマナーと著作権に関する内容を記載します。本規約に同意した上で、サービスをご利用ください。本規約は、予告なく改定されることがあります。</p>
