--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -35,7 +35,13 @@
     <li>管理人のTwitter：<a href="https://twitter.com/fuyu77" target="_blank">@fuyu77</a></li>
   </ul>
   <h4 class="mt-4">更新履歴</h4>
-  <dl class="mt-3">
+  <dl class="mt-3 mb-3">
+    <dt><time>2022/11/04</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>レイアウトを調整</li>
+      </ul>
+    </dd>
     <dt><time>2022/11/03</time></dt>
     <dd>
       <ul class="ml">
