--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -16,7 +16,7 @@
   <%= render 'favorites/favorites_count', post: post, size: 'sm' %>
   <% if show_avatar %>
     <div>
-      <%= link_to (image_tag post.user.avatar.url(:small), class: 'rounded align-baseline'), user_path(post.user), class: 'mb-3' %>
+      <%= link_to (image_tag post.user.avatar.url(:small), class: 'rounded align-baseline'), user_path(post.user) %>
     </div>
   <% end %>
 </div>
