--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,7 +1,7 @@
 <% @title = 'サイトのご案内' %>
 <% @description = 'Utakataの概要・使い方・連絡先・更新履歴など。' %>
 
-<div class="col-11 col-lg-5 mx-auto">
+<div class="col-11 col-lg-5 mx-auto mb-3">
   <h4 class="mt-4">サイトのご案内</h4>
   <h5 class="mt-4">Utakataとは？</h5>
   <p>短歌を投稿・共有できるサイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。全機能を無料でご利用いただけます。</p>
@@ -35,7 +35,7 @@
     <li>管理人のTwitter：<a href="https://twitter.com/fuyu77" target="_blank">@fuyu77</a></li>
   </ul>
   <h4 class="mt-4">更新履歴</h4>
-  <dl class="mt-3 mb-3">
+  <dl class="mt-3">
     <dt><time>2022/11/04</time></dt>
     <dd>
       <ul class="ml">
