--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -10,7 +10,7 @@
 <% end -%>
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <div>
-    <a href="../../about#mis-spelling">アカウント登録したのに確認用メールが届かない</a><br />
+    <a href="../../about#misspelling">アカウント登録したのに確認用メールが届かない</a><br />
   </div>
 <% end -%>
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
