--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -41,7 +41,7 @@
     <dt><time>2022/11/04</time></dt>
     <dd>
       <ul class="ml">
-        <li>アカウント登録時のメールアドレスの確認を再開</li>
+        <li>アカウント登録時のメールアドレスの認証を再開</li>
         <li>アカウント登録時にreCAPTCHAによる「私はロボットではありません」のチェックを追加</li>
         <li>レイアウトを調整</li>
       </ul>
