--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -38,6 +38,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl class="mt-3">
+    <dt><time>2022/11/07</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>1日10首の投稿制限が機能していなかった不具合を解消</li>
+      </ul>
+    </dd>
     <dt><time>2022/11/04</time></dt>
     <dd>
       <ul class="ml">
