--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -41,7 +41,7 @@
     <dt><time>2023/02/21</time></dt>
     <dd>
       <ul class="ml">
-        <li>歌人ページをシェアした際にデフォルトユーザー画像がサムネイル表示されない問題を解消</li>
+        <li>ユーザーページをシェアした際にデフォルトユーザー画像がサムネイル表示されない問題を解消</li>
       </ul>
     </dd>
     <dt><time>2023/02/10</time></dt>
