fix: fix potentially unsafe external link

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
       <%= @post.published_at.strftime('%Y.%-m.%-d %-H:%M') %>
     </div>
     <div>
-      <a href="<%= @twitter_share_url %>" target="_blank">
+      <a href="<%= @twitter_share_url %>" target="_blank" rel="noopener noreferrer">
         <i class="lg bi bi-twitter bi-vertical"></i>
       </a>
     </div>
