--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -38,6 +38,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl class="mt-3">
+    <dt><time>2023/04/08</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>歌人プロフィールに含まれるリンクを別タブで開くように変更</li>
+      </ul>
+    </dd>
     <dt><time>2023/02/21</time></dt>
     <dd>
       <ul class="ml">
