fix: remove account registration through Twiiter

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -41,7 +41,7 @@
     <dt><time>2023/04/29</time></dt>
     <dd>
       <ul class="ml">
-        <li>歌人プロフィールに含まれるリンクを別タブで開くように変更</li>
+        <li>Twitter連携によるアカウント登録を廃止</li>
       </ul>
     </dd>
     <dt><time>2023/04/08</time></dt>
