--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,9 @@
-<% @title = '新規アカウント登録' %>
+<% @title = 'アカウント登録' %>
 <% @description = 'Utakataのアカウント登録を行えます。' %>
 
 <div class="col-11 col-lg-5 mx-auto mb-3">
-  <h5 class="mt-4 mb-3">Twitterアカウントで登録する</h5>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <div class="mb-3">
-      <%= button_to omniauth_authorize_path(resource_name, provider), class: 'btn btn-primary', method: :post, data: { turbo: false } do %>
-        <i class="bi bi-twitter text-white"></i> 登録する
-      <% end %>
-    </div>
-  <% end -%>
-  <h5 class="mt-4 mb-3">メールアドレスで登録する</h5>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <div class="form-floating mb-3">
+    <div class="form-floating mt-4 mb-3">
       <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: 'Utakata' %>
       <%= f.label :name %>
     </div>
